--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -201,6 +201,128 @@
       ]
     },
     {
+      "label": "Run DTA (capa)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (debug)",
+        "Copy duaIterate.py to SUMO",
+        "Clean capa"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/capa",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/capa/capa.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/capa/capa.trips.xml",
+        "--routing-algorithm",
+        "CCH",
+        "--mesosim",
+        "--aggregation",
+        "300",
+        "--begin",
+        "0",
+        "--end",
+        "3600",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
+        "duarouter--precision",
+        "6",
+        "sumo--step-length",
+        "0.1",
+        "sumo--precision",
+        "6",
+        "cch-preprocessor--input-prefix",
+        "capa",
+        "cch-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/capa",
+        "relative-gap--net-prefix",
+        "capa",
+        "relative-gap--net-dir",
+        "${workspaceFolder}/import/sumo/capa"
+      ]
+    },
+    {
+      "label": "Run FastDTA (capa)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (debug)",
+        "Copy duaIterate.py to SUMO",
+        "Clean capa-fast-dta"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/capa-fast-dta",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/capa/capa.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/capa/capa.trips.xml",
+        "--routing-algorithm",
+        "fastdta",
+        "--mesosim",
+        "--aggregation",
+        "300",
+        "--begin",
+        "0",
+        "--end",
+        "3600",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
+        "duarouter--precision",
+        "6",
+        "sumo--step-length",
+        "0.1",
+        "sumo--precision",
+        "6",
+        "fastdta-preprocessor--input-prefix",
+        "capa",
+        "fastdta-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/capa",
+        "fastdta-router--vdf",
+        "bpr",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1999",
+        "relative-gap--net-prefix",
+        "capa",
+        "relative-gap--net-dir",
+        "${workspaceFolder}/import/sumo/capa"
+      ]
+    },
+    {
       "label": "Run DTA (random)",
       "type": "shell",
       "command": "python",
@@ -245,11 +367,9 @@
         "duarouter--precision",
         "6",
         "sumo--step-length",
-        "0.1",
+        "1",
         "sumo--precision",
         "6",
-        "sumo--default.speeddev",
-        "0.0",
         "cch-preprocessor--input-prefix",
         "random",
         "cch-preprocessor--input-dir",
@@ -306,10 +426,9 @@
         "6",
         "sumo--step-length",
         "0.1",
+        "sumo--extrapolate-departpos",
         "sumo--precision",
         "6",
-        "sumo--default.speeddev",
-        "0.0",
         "fastdta-preprocessor--input-prefix",
         "random",
         "fastdta-preprocessor--input-dir",
@@ -317,9 +436,15 @@
         "fastdta-router--vdf",
         "bpr",
         "fastdta-router--samples",
-        "0.1",
+        "1",
         "fastdta-router--samples",
-        "0.9",
+        "1",
+        "fastdta-router--samples",
+        "2",
+        "fastdta-router--samples",
+        "2",
+        "fastdta-router--samples",
+        "4",
         "relative-gap--net-prefix",
         "random",
         "relative-gap--net-dir",
@@ -763,6 +888,26 @@
         "cwd": "${workspaceFolder}/data/imported/sumo"
       },
       "args": ["-rf", "grid-dijkstra-rust/*"],
+      "hide": true
+    },
+    {
+      "label": "Clean capa",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "capa/*"],
+      "hide": true
+    },
+    {
+      "label": "Clean capa-fast-dta",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "capa-fast-dta/*"],
       "hide": true
     },
     {
