refactor: remove node expansions

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -365,11 +365,14 @@
         "--logittheta",
         "1.0",
         "duarouter--precision",
-        "6",
+        "9",
         "sumo--step-length",
         "1",
         "sumo--precision",
-        "6",
+        "9",
+        "sumo--ignore-route-errors",
+        "sumo--aggregate-warnings",
+        "5",
         "cch-preprocessor--input-prefix",
         "random",
         "cch-preprocessor--input-dir",
