debug: reintroduce astar feature to check if queries are faster

--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -10,6 +10,7 @@ default = [
     "tdcch-precustomization",
     "tdcch-postcustomization",
     "tdcch-triangle-sorting",
+    "tdcch-query-astar",
 ]
 tdcch-disable-par = ["cch-disable-par"]
 cch-disable-par = []
