fix: set a set of features which do not produce floating point errors

--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -10,6 +10,7 @@ default = [
     "tdcch-precustomization",
     "tdcch-postcustomization",
     "tdcch-triangle-sorting",
+    "tdcch-query-astar",
 ]
 tdcch-disable-par = ["cch-disable-par"]
 cch-disable-par = []
@@ -22,7 +23,7 @@ tdcch-postcustomization = []
 tdcch-triangle-sorting = []
 tdcch-query-lazy = []
 tdcch-query-corridor = []
-tdcch-query-astar = ["tdcch-query-corridor"]
+tdcch-query-astar = []
 tdcch-profiles-with-holes = []
 tdcch-profiles-iterative-reconstruction = ["tdcch-profiles-with-holes"]
 tdcch-prevent-colinear = []
