--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -364,13 +364,11 @@
         "1.0",
         "--logittheta",
         "1.0",
-        "duarouter--precision",
-        "9",
         "sumo--step-length",
         "1",
-        "sumo--precision",
-        "9",
         "sumo--ignore-route-errors",
+        "sumo--time-to-teleport.disconnected",
+        "0",
         "sumo--aggregate-warnings",
         "5",
         "cch-preprocessor--input-prefix",
