--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -569,7 +569,7 @@
         "dijkstra-rust",
         "--mesosim",
         "--aggregation",
-        "300",
+        "60",
         "--begin",
         "0",
         "--end",
@@ -585,15 +585,16 @@
         "1.0",
         "--logittheta",
         "1.0",
-        "sumo--default.speeddev",
-        "0.0",
+        "sumo--step-length",
+        "1",
+        "sumo--ignore-route-errors",
+        "sumo--time-to-teleport.disconnected",
+        "0",
+        "sumo--aggregate-warnings",
+        "5",
         "dijkstra-preprocessor--input-prefix",
         "random",
         "dijkstra-preprocessor--input-dir",
-        "${workspaceFolder}/import/sumo/random",
-        "relative-gap--net-prefix",
-        "random",
-        "relative-gap--net-dir",
         "${workspaceFolder}/import/sumo/random"
       ]
     },
