--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -10,8 +10,6 @@ default = [
     "tdcch-precustomization",
     "tdcch-postcustomization",
     "tdcch-triangle-sorting",
-    "tdcch-query-astar",
-    "tdcch-query-lazy",
 ]
 tdcch-disable-par = ["cch-disable-par"]
 cch-disable-par = []
@@ -24,7 +22,7 @@ tdcch-postcustomization = []
 tdcch-triangle-sorting = []
 tdcch-query-lazy = []
 tdcch-query-corridor = []
-tdcch-query-astar = ["tdcch-query-corridor"]
+tdcch-query-astar = []
 tdcch-profiles-with-holes = []
 tdcch-profiles-iterative-reconstruction = ["tdcch-profiles-with-holes"]
 tdcch-prevent-colinear = []
