--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -7,6 +7,7 @@ build = "build.rs"
 
 [features]
 default = [
+    "tdcch-approx",
     "tdcch-precustomization",
     "tdcch-postcustomization",
     "tdcch-triangle-sorting",
