refactor: adapt fastdta calculation

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -251,10 +251,6 @@
         "cch-preprocessor--input-prefix",
         "capa",
         "cch-preprocessor--input-dir",
-        "${workspaceFolder}/import/sumo/capa",
-        "relative-gap--net-prefix",
-        "capa",
-        "relative-gap--net-dir",
         "${workspaceFolder}/import/sumo/capa"
       ]
     },
@@ -313,13 +309,19 @@
         "fastdta-router--vdf",
         "bpr",
         "fastdta-router--samples",
-        "1",
+        "10",
         "fastdta-router--samples",
-        "1999",
-        "relative-gap--net-prefix",
-        "capa",
-        "relative-gap--net-dir",
-        "${workspaceFolder}/import/sumo/capa"
+        "10",
+        "fastdta-router--samples",
+        "10",
+        "fastdta-router--samples",
+        "10",
+        "fastdta-router--samples",
+        "10",
+        "fastdta-router--samples",
+        "7000",
+        "fastdta-router--seed",
+        "42"
       ]
     },
     {
@@ -348,7 +350,7 @@
         "CCH",
         "--mesosim",
         "--aggregation",
-        "60",
+        "900",
         "--begin",
         "0",
         "--end",
@@ -403,7 +405,7 @@
         "fastdta",
         "--mesosim",
         "--aggregation",
-        "300",
+        "60",
         "--begin",
         "0",
         "--end",
@@ -419,13 +421,14 @@
         "1.0",
         "--logittheta",
         "1.0",
-        "duarouter--precision",
-        "6",
         "sumo--step-length",
         "0.1",
         "sumo--extrapolate-departpos",
-        "sumo--precision",
-        "6",
+        "sumo--ignore-route-errors",
+        "sumo--time-to-teleport.disconnected",
+        "0",
+        "sumo--aggregate-warnings",
+        "5",
         "fastdta-preprocessor--input-prefix",
         "random",
         "fastdta-preprocessor--input-dir",
@@ -441,11 +444,7 @@
         "fastdta-router--samples",
         "2",
         "fastdta-router--samples",
-        "4",
-        "relative-gap--net-prefix",
-        "random",
-        "relative-gap--net-dir",
-        "${workspaceFolder}/import/sumo/random"
+        "4"
       ]
     },
     {
@@ -569,11 +568,11 @@
         "dijkstra-rust",
         "--mesosim",
         "--aggregation",
-        "60",
+        "100",
         "--begin",
-        "0",
+        "21600",
         "--end",
-        "86400",
+        "43200",
         "--relative-gap",
         "0.0001",
         "--max-convergence-deviation",
