--- a/fastdta/Cargo.toml
+++ b/fastdta/Cargo.toml
@@ -13,3 +13,8 @@ regex = "1.10.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 rayon = "^1.5.1"
+argmin = { version = "0.10" }
+argmin-math = { version = "0.4", features = [
+    "ndarray_latest",
+    "nalgebra_latest",
+] }
