--- a/fastdta/Cargo.toml
+++ b/fastdta/Cargo.toml
@@ -13,8 +13,6 @@ regex = "1.10.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 rayon = "^1.5.1"
-argmin = { version = "0.10" }
-argmin-math = { version = "0.4", features = [
-    "ndarray_latest",
-    "nalgebra_latest",
-] }
+scirs2-optimize = "0.1.0-rc.2"
+scirs2-core = "0.1.0-rc.1"
+ndarray = "0.15"
