refactor: remove vdf in favor of traffic model

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -306,8 +306,8 @@
         "capa",
         "fastdta-preprocessor--input-dir",
         "${workspaceFolder}/import/sumo/capa",
-        "fastdta-router--vdf",
-        "bpr",
+        "fastdta-router--traffic-model",
+        "modified-lee",
         "fastdta-router--samples",
         "10",
         "fastdta-router--samples",
@@ -433,8 +433,8 @@
         "random",
         "fastdta-preprocessor--input-dir",
         "${workspaceFolder}/import/sumo/random",
-        "fastdta-router--vdf",
-        "bpr",
+        "fastdta-router--traffic-model",
+        "modified-lee",
         "fastdta-router--samples",
         "1",
         "fastdta-router--samples",
