fix: remove lazy query and corridor feautres as they tend to get buggy on larger inputs with queries along longer paths

--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -11,7 +11,6 @@ default = [
     "tdcch-postcustomization",
     "tdcch-triangle-sorting",
     "tdcch-query-astar",
-    "tdcch-query-lazy",
 ]
 tdcch-disable-par = ["cch-disable-par"]
 cch-disable-par = []
@@ -24,7 +23,7 @@ tdcch-postcustomization = []
 tdcch-triangle-sorting = []
 tdcch-query-lazy = []
 tdcch-query-corridor = []
-tdcch-query-astar = ["tdcch-query-corridor"]
+tdcch-query-astar = []
 tdcch-profiles-with-holes = []
 tdcch-profiles-iterative-reconstruction = ["tdcch-profiles-with-holes"]
 tdcch-prevent-colinear = []
