refactor: fix doc and variable names increase readabilty

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -223,7 +223,7 @@
         "-n",
         "${workspaceFolder}/import/sumo/capa/capa.net.xml",
         "-t",
-        "${workspaceFolder}/import/sumo/capa/capa.trips.xml",
+        "${workspaceFolder}/import/sumo/capa/capa.sb.trips.xml",
         "--routing-algorithm",
         "CCH",
         "--mesosim",
@@ -277,16 +277,16 @@
         "-n",
         "${workspaceFolder}/import/sumo/capa/capa.net.xml",
         "-t",
-        "${workspaceFolder}/import/sumo/capa/capa.trips.xml",
+        "${workspaceFolder}/import/sumo/capa/capa.sb.trips.xml",
         "--routing-algorithm",
         "fastdta",
         "--mesosim",
         "--aggregation",
         "300",
         "--begin",
-        "50",
+        "0",
         "--end",
-        "3650",
+        "3600",
         "--relative-gap",
         "0.0001",
         "--max-convergence-deviation",
@@ -311,9 +311,25 @@
         "fastdta-router--traffic-model",
         "modified-lee",
         "fastdta-router--samples",
-        "5",
+        "1",
         "fastdta-router--samples",
-        "5",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
         "fastdta-router--seed",
         "42"
       ]
@@ -429,6 +445,22 @@
         "${workspaceFolder}/import/sumo/random",
         "fastdta-router--traffic-model",
         "modified-lee",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
         "fastdta-router--samples",
         "1",
         "fastdta-router--samples",
