--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -223,12 +223,12 @@
         "-n",
         "${workspaceFolder}/import/sumo/capa/capa.net.xml",
         "-t",
-        "${workspaceFolder}/import/sumo/capa/capa.sb.trips.xml",
+        "${workspaceFolder}/import/sumo/capa/capa.sb.modified.trips.xml",
         "--routing-algorithm",
         "CCH",
         "--mesosim",
         "--aggregation",
-        "300",
+        "60",
         "--begin",
         "0",
         "--end",
@@ -277,12 +277,12 @@
         "-n",
         "${workspaceFolder}/import/sumo/capa/capa.net.xml",
         "-t",
-        "${workspaceFolder}/import/sumo/capa/capa.sb.trips.xml",
+        "${workspaceFolder}/import/sumo/capa/capa.sb.modified.trips.xml",
         "--routing-algorithm",
         "fastdta",
         "--mesosim",
         "--aggregation",
-        "300",
+        "60",
         "--begin",
         "0",
         "--end",
@@ -313,23 +313,12 @@
         "fastdta-router--samples",
         "1",
         "fastdta-router--samples",
-        "1",
+        "2",
         "fastdta-router--samples",
-        "1",
+        "3",
         "fastdta-router--samples",
-        "1",
-        "fastdta-router--samples",
-        "1",
-        "fastdta-router--samples",
-        "1",
-        "fastdta-router--samples",
-        "1",
-        "fastdta-router--samples",
-        "1",
-        "fastdta-router--samples",
-        "1",
-        "fastdta-router--samples",
-        "1",
+        "4",
+
         "fastdta-router--seed",
         "42"
       ]
