--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -313,14 +313,147 @@
         "fastdta-router--samples",
         "1",
         "fastdta-router--samples",
-        "2",
+        "1",
         "fastdta-router--samples",
-        "3",
+        "1",
         "fastdta-router--samples",
-        "4",
-
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
+        "fastdta-router--samples",
+        "1",
         "fastdta-router--seed",
         "42"
+      ]
+    },
+    {
+      "label": "Run DTA (capa; dijkstra)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (debug)",
+        "Copy duaIterate.py to SUMO",
+        "Clean capa-dijkstra"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/capa-dijkstra",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/capa/capa.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/capa/capa.sb.modified.trips.xml",
+        "--routing-algorithm",
+        "dijkstra",
+        "--mesosim",
+        "--aggregation",
+        "60",
+        "--begin",
+        "0",
+        "--end",
+        "3600",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
+        "duarouter--precision",
+        "6",
+        "sumo--step-length",
+        "0.1",
+        "sumo--precision",
+        "6",
+        "relative-gap--net-prefix",
+        "capa",
+        "relative-gap--net-dir",
+        "${workspaceFolder}/import/sumo/capa"
       ]
     },
     {
@@ -914,6 +1047,16 @@
         "cwd": "${workspaceFolder}/data/imported/sumo"
       },
       "args": ["-rf", "capa-fast-dta/*"],
+      "hide": true
+    },
+    {
+      "label": "Clean capa-dijkstra",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "capa-dijkstra/*"],
       "hide": true
     },
     {
