--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -315,7 +315,68 @@
       ]
     },
     {
+      "label": "Run DTA (capa; SUMO)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (debug)",
+        "Copy duaIterate.py to SUMO",
+        "Clean capa-sumo"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/capa-sumo",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/capa/capa.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/capa/capa.sb.modified.trips.xml",
+        "--routing-algorithm",
+        "sumo-sample",
+        "--mesosim",
+        "--aggregation",
+        "60",
+        "--begin",
+        "0",
+        "--end",
+        "3600",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
+        "duarouter--precision",
+        "6",
+        "sumo--step-length",
+        "0.1",
+        "sumo--precision",
+        "6",
+        "sample-preprocessor--input-prefix",
+        "capa",
+        "sample-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/capa",
+        "sample-router--samples",
+        "1 10 100",
+        "sample-router--seed",
+        "42",
+        "sample-router--aggregation",
+        "60"
+      ]
+    },
+    {
       "label": "Run DTA (capa; dijkstra)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -481,6 +542,66 @@
         "modified-lee",
         "fastdta-router--samples",
         "1 1 1 1 1 1 1 1 1 1 1 1"
+      ]
+    },
+    {
+      "label": "Run DTA (random; SUMO)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (debug)",
+        "Copy duaIterate.py to SUMO",
+        "Clean random-sumo"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/random-sumo",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/random/random.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/random/random.trips.xml",
+        "--routing-algorithm",
+        "sumo-sample",
+        "--mesosim",
+        "--aggregation",
+        "60",
+        "--begin",
+        "0",
+        "--end",
+        "3600",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
+        "duarouter--precision",
+        "6",
+        "sumo--step-length",
+        "0.1",
+        "sumo--precision",
+        "6",
+        "sample-preprocessor--input-prefix",
+        "random",
+        "sample-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/random",
+        "sample-router--samples",
+        "1 10 100",
+        "sample-router--seed",
+        "42",
+        "sample-router--aggregation",
+        "60"
       ]
     },
     {
@@ -896,6 +1017,16 @@
       "hide": true
     },
     {
+      "label": "Clean random-sumo",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "random-sumo/*"],
+      "hide": true
+    },
+    {
       "label": "Clean random-dijkstra-rust",
       "type": "shell",
       "command": "rm",
@@ -933,6 +1064,16 @@
         "cwd": "${workspaceFolder}/data/imported/sumo"
       },
       "args": ["-rf", "capa-fast-dta/*"],
+      "hide": true
+    },
+    {
+      "label": "Clean capa-sumo",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "capa-sumo/*"],
       "hide": true
     },
     {
