--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -235,13 +235,6 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
-        "--logit",
-        "--logitbeta",
-        "1.0",
-        "--logitgamma",
-        "1.0",
-        "--logittheta",
-        "1.0",
         "duarouter--precision",
         "6",
         "sumo--step-length",
@@ -289,13 +282,6 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
-        "--logit",
-        "--logitbeta",
-        "1.0",
-        "--logitgamma",
-        "1.0",
-        "--logittheta",
-        "1.0",
         "duarouter--precision",
         "6",
         "sumo--step-length",
@@ -309,7 +295,7 @@
         "fastdta-router--traffic-model",
         "modified-lee",
         "fastdta-router--samples",
-        "1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1",
+        "1 1",
         "fastdta-router--seed",
         "42"
       ]
@@ -349,13 +335,6 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
-        "--logit",
-        "--logitbeta",
-        "1.0",
-        "--logitgamma",
-        "1.0",
-        "--logittheta",
-        "1.0",
         "duarouter--precision",
         "6",
         "sumo--step-length",
@@ -367,16 +346,19 @@
         "sample-preprocessor--input-dir",
         "${workspaceFolder}/import/sumo/capa",
         "sample-router--samples",
-        "1 10 100",
+        "1 1",
         "sample-router--seed",
         "42",
         "sample-router--aggregation",
-        "60"
+        "60",
+        "relative-gap--net-prefix",
+        "capa",
+        "relative-gap--net-dir",
+        "${workspaceFolder}/import/sumo/capa"
       ]
     },
     {
       "label": "Run DTA (capa; dijkstra)",
-      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -410,13 +392,6 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
-        "--logit",
-        "--logitbeta",
-        "1.0",
-        "--logitgamma",
-        "1.0",
-        "--logittheta",
-        "1.0",
         "duarouter--precision",
         "6",
         "sumo--step-length",
@@ -430,7 +405,174 @@
       ]
     },
     {
+      "label": "Run DTA (leopoldshafen)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (debug)",
+        "Copy duaIterate.py to SUMO",
+        "Clean leopoldshafen"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/leopoldshafen",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/leopoldshafen/leopoldshafen.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/leopoldshafen/leopoldshafen.am.trips.xml",
+        "--routing-algorithm",
+        "CCH",
+        "--mesosim",
+        "--aggregation",
+        "60",
+        "--begin",
+        "0",
+        "--end",
+        "86400",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "duarouter--precision",
+        "6",
+        "sumo--step-length",
+        "0.1",
+        "sumo--precision",
+        "6",
+        "sumo--ignore-route-errors",
+        "sumo--time-to-teleport.disconnected",
+        "0",
+        "cch-preprocessor--input-prefix",
+        "leopoldshafen",
+        "cch-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/leopoldshafen"
+      ]
+    },
+    {
+      "label": "Run FastDTA (leopoldshafen)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (debug)",
+        "Copy duaIterate.py to SUMO",
+        "Clean leopoldshafen-fast-dta"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/leopoldshafen-fast-dta",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/leopoldshafen/leopoldshafen.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/leopoldshafen/leopoldshafen.am.trips.xml",
+        "--routing-algorithm",
+        "fastdta",
+        "--mesosim",
+        "--aggregation",
+        "60",
+        "--begin",
+        "0",
+        "--end",
+        "86400",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "duarouter--precision",
+        "6",
+        "sumo--step-length",
+        "0.1",
+        "sumo--precision",
+        "6",
+        "sumo--ignore-route-errors",
+        "sumo--time-to-teleport.disconnected",
+        "0",
+        "fastdta-preprocessor--input-prefix",
+        "leopoldshafen",
+        "fastdta-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/leopoldshafen",
+        "fastdta-router--traffic-model",
+        "modified-lee",
+        "fastdta-router--samples",
+        "1 1",
+        "fastdta-router--seed",
+        "42"
+      ]
+    },
+    {
+      "label": "Run DTA (leopoldshafen; SUMO)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (debug)",
+        "Copy duaIterate.py to SUMO",
+        "Clean leopoldshafen-sumo"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/leopoldshafen-sumo",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/leopoldshafen/leopoldshafen.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/leopoldshafen/leopoldshafen.am.trips.xml",
+        "--routing-algorithm",
+        "sumo-sample",
+        "--mesosim",
+        "--aggregation",
+        "60",
+        "--begin",
+        "0",
+        "--end",
+        "86400",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "duarouter--precision",
+        "6",
+        "sumo--step-length",
+        "0.1",
+        "sumo--precision",
+        "6",
+        "sumo--ignore-route-errors",
+        "sumo--time-to-teleport.disconnected",
+        "0",
+        "sample-preprocessor--input-prefix",
+        "leopoldshafen",
+        "sample-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/leopoldshafen",
+        "sample-router--samples",
+        "1 1",
+        "sample-router--seed",
+        "42",
+        "sample-router--aggregation",
+        "60",
+        "relative-gap--net-prefix",
+        "leopoldshafen",
+        "relative-gap--net-dir",
+        "${workspaceFolder}/import/sumo/leopoldshafen"
+      ]
+    },
+    {
       "label": "Run DTA (random)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -464,15 +606,8 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
-        "--logit",
-        "--logitbeta",
-        "1.0",
-        "--logitgamma",
-        "1.0",
-        "--logittheta",
-        "1.0",
         "sumo--step-length",
-        "1",
+        "0.1",
         "sumo--ignore-route-errors",
         "sumo--time-to-teleport.disconnected",
         "0",
@@ -486,6 +621,7 @@
     },
     {
       "label": "Run FastDTA (random)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -519,16 +655,8 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
-        "--logit",
-        "--logitbeta",
-        "1.0",
-        "--logitgamma",
-        "1.0",
-        "--logittheta",
-        "1.0",
         "sumo--step-length",
         "0.1",
-        "sumo--extrapolate-departpos",
         "sumo--ignore-route-errors",
         "sumo--time-to-teleport.disconnected",
         "0",
@@ -538,14 +666,13 @@
         "random",
         "fastdta-preprocessor--input-dir",
         "${workspaceFolder}/import/sumo/random",
-        "fastdta-router--traffic-model",
-        "modified-lee",
         "fastdta-router--samples",
-        "1 1 1 1 1 1 1 1 1 1 1 1"
+        "1 1 1"
       ]
     },
     {
       "label": "Run DTA (random; SUMO)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -592,12 +719,13 @@
         "0.1",
         "sumo--precision",
         "6",
+        "sumo--ignore-route-errors",
         "sample-preprocessor--input-prefix",
         "random",
         "sample-preprocessor--input-dir",
         "${workspaceFolder}/import/sumo/random",
         "sample-router--samples",
-        "1 10 100",
+        "1 1 1 1 1 1 1 1",
         "sample-router--seed",
         "42",
         "sample-router--aggregation",
@@ -697,6 +825,7 @@
     },
     {
       "label": "Run DTA (random; dijkstra-rust)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -752,6 +881,7 @@
     },
     {
       "label": "Run DTA (random; dijkstra)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -1084,6 +1214,36 @@
         "cwd": "${workspaceFolder}/data/imported/sumo"
       },
       "args": ["-rf", "capa-dijkstra/*"],
+      "hide": true
+    },
+    {
+      "label": "Clean leopoldshafen",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "leopoldshafen/*"],
+      "hide": true
+    },
+    {
+      "label": "Clean leopoldshafen-fast-dta",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "leopoldshafen-fast-dta/*"],
+      "hide": true
+    },
+    {
+      "label": "Clean leopoldshafen-sumo",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "leopoldshafen-sumo/*"],
       "hide": true
     },
     {
