debug: add output to failed assertions, disable parallelization, set buffer

--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -11,6 +11,7 @@ default = [
     "tdcch-postcustomization",
     "tdcch-triangle-sorting",
     "tdcch-query-astar",
+    "tdcch-disable-par",
 ]
 tdcch-disable-par = ["cch-disable-par"]
 cch-disable-par = []
