fix: increase tolerance for numerical operations which are accumulated over time and skip IPPs at nearly identical time during linking

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -425,16 +425,16 @@
         "-n",
         "${workspaceFolder}/import/sumo/leopoldshafen/leopoldshafen.net.xml",
         "-t",
-        "${workspaceFolder}/import/sumo/leopoldshafen/leopoldshafen.am.trips.xml",
+        "${workspaceFolder}/import/sumo/leopoldshafen/leopoldshafen.di.trips.xml",
         "--routing-algorithm",
         "CCH",
         "--mesosim",
         "--aggregation",
         "60",
         "--begin",
-        "21600",
+        "0",
         "--end",
-        "43200",
+        "86400",
         "--relative-gap",
         "0.0001",
         "--max-convergence-deviation",
