--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -24,7 +24,7 @@ tdcch-postcustomization = []
 tdcch-triangle-sorting = []
 tdcch-query-lazy = []
 tdcch-query-corridor = []
-tdcch-query-astar = []
+tdcch-query-astar = ["tdcch-query-corridor"]
 tdcch-profiles-with-holes = []
 tdcch-profiles-iterative-reconstruction = ["tdcch-profiles-with-holes"]
 tdcch-prevent-colinear = []
