--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -301,6 +301,53 @@
       ]
     },
     {
+      "label": "Run DTA (capa-dijkstra-rust)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (debug)",
+        "Copy duaIterate.py to SUMO",
+        "Clean capa-dijkstra-rust"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/capa-dijkstra-rust",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/capa/capa.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/capa/capa.sb.modified.trips.xml",
+        "--routing-algorithm",
+        "dijkstra-rust",
+        "--mesosim",
+        "--aggregation",
+        "60",
+        "--begin",
+        "0",
+        "--end",
+        "3600",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "duarouter--precision",
+        "6",
+        "sumo--step-length",
+        "0.1",
+        "sumo--precision",
+        "6",
+        "dijkstra-preprocessor--input-prefix",
+        "capa",
+        "dijkstra-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/capa"
+      ]
+    },
+    {
       "label": "Run DTA (capa; SUMO)",
       "type": "shell",
       "command": "python",
@@ -1194,6 +1241,16 @@
         "cwd": "${workspaceFolder}/data/imported/sumo"
       },
       "args": ["-rf", "capa-fast-dta/*"],
+      "hide": true
+    },
+    {
+      "label": "Clean capa-dijkstra-rust",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "capa-dijkstra-rust/*"],
       "hide": true
     },
     {
