test: add another small instance

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -235,6 +235,13 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
         "duarouter--precision",
         "6",
         "sumo--step-length",
@@ -282,6 +289,14 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
+        "-s",
         "duarouter--precision",
         "6",
         "sumo--step-length",
@@ -295,7 +310,7 @@
         "fastdta-router--traffic-model",
         "modified-lee",
         "fastdta-router--samples",
-        "1 1",
+        "1 1 1",
         "fastdta-router--seed",
         "42"
       ]
@@ -335,6 +350,14 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
+        "-s",
         "duarouter--precision",
         "6",
         "sumo--step-length",
@@ -382,6 +405,14 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
+        "-s",
         "duarouter--precision",
         "6",
         "sumo--step-length",
@@ -393,7 +424,7 @@
         "sample-preprocessor--input-dir",
         "${workspaceFolder}/import/sumo/capa",
         "sample-router--samples",
-        "1 1",
+        "1 1 1",
         "sample-router--seed",
         "42",
         "sample-router--aggregation",
@@ -439,6 +470,7 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
+        "-s",
         "duarouter--precision",
         "6",
         "sumo--step-length",
@@ -453,6 +485,7 @@
     },
     {
       "label": "Run DTA (lh)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -486,12 +519,22 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
+        "-s",
         "duarouter--precision",
         "6",
         "sumo--step-length",
         "0.1",
         "sumo--precision",
         "6",
+        "sumo--threads",
+        "8",
         "sumo--ignore-route-errors",
         "sumo--time-to-teleport.disconnected",
         "0",
@@ -503,6 +546,7 @@
     },
     {
       "label": "Run FastDTA (lh)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -536,12 +580,22 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
+        "-s",
         "duarouter--precision",
         "6",
         "sumo--step-length",
         "0.1",
         "sumo--precision",
         "6",
+        "sumo--threads",
+        "8",
         "sumo--ignore-route-errors",
         "sumo--time-to-teleport.disconnected",
         "0",
@@ -559,6 +613,7 @@
     },
     {
       "label": "Run DTA (lh; SUMO)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -592,12 +647,22 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
+        "-s",
         "duarouter--precision",
         "6",
         "sumo--step-length",
         "0.1",
         "sumo--precision",
         "6",
+        "sumo--threads",
+        "8",
         "sumo--ignore-route-errors",
         "sumo--time-to-teleport.disconnected",
         "0",
@@ -615,6 +680,202 @@
         "leopoldshafen",
         "relative-gap--net-dir",
         "${workspaceFolder}/import/sumo/leopoldshafen"
+      ]
+    },
+    {
+      "label": "Run DTA (capa2)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (debug)",
+        "Copy duaIterate.py to SUMO",
+        "Clean capa2"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/capa2",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/capa2/capa2.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/capa2/capa2.trips.xml",
+        "--routing-algorithm",
+        "CCH",
+        "--mesosim",
+        "--aggregation",
+        "60",
+        "--begin",
+        "0",
+        "--end",
+        "32400",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
+        "-s",
+        "duarouter--precision",
+        "6",
+        "sumo--step-length",
+        "0.1",
+        "sumo--precision",
+        "6",
+        "sumo--threads",
+        "8",
+        "sumo--ignore-route-errors",
+        "sumo--time-to-teleport.disconnected",
+        "0",
+        "cch-preprocessor--input-prefix",
+        "capa2",
+        "cch-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/capa2"
+      ]
+    },
+    {
+      "label": "Run FastDTA (capa2)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (debug)",
+        "Copy duaIterate.py to SUMO",
+        "Clean capa2-fast-dta"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/capa2-fast-dta",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/capa2/capa2.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/capa2/capa2.trips.xml",
+        "--routing-algorithm",
+        "fastdta",
+        "--mesosim",
+        "--aggregation",
+        "60",
+        "--begin",
+        "0",
+        "--end",
+        "32400",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
+        "-s",
+        "duarouter--precision",
+        "6",
+        "sumo--step-length",
+        "0.1",
+        "sumo--precision",
+        "6",
+        "sumo--threads",
+        "8",
+        "sumo--ignore-route-errors",
+        "sumo--time-to-teleport.disconnected",
+        "0",
+        "fastdta-preprocessor--input-prefix",
+        "capa2",
+        "fastdta-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/capa2",
+        "fastdta-router--traffic-model",
+        "modified-lee",
+        "fastdta-router--samples",
+        "1 1",
+        "fastdta-router--seed",
+        "42"
+      ]
+    },
+    {
+      "label": "Run DTA (capa2; SUMO)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (debug)",
+        "Copy duaIterate.py to SUMO",
+        "Clean capa2-sumo"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/capa2-sumo",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/capa2/capa2.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/capa2/capa2.trips.xml",
+        "--routing-algorithm",
+        "sumo-sample",
+        "--mesosim",
+        "--aggregation",
+        "60",
+        "--begin",
+        "0",
+        "--end",
+        "32400",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
+        "-s",
+        "duarouter--precision",
+        "6",
+        "sumo--step-length",
+        "0.1",
+        "sumo--precision",
+        "6",
+        "sumo--threads",
+        "8",
+        "sumo--ignore-route-errors",
+        "sumo--time-to-teleport.disconnected",
+        "0",
+        "sample-preprocessor--input-prefix",
+        "capa2",
+        "sample-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/capa2",
+        "sample-router--samples",
+        "1 1",
+        "sample-router--seed",
+        "42",
+        "sample-router--aggregation",
+        "60",
+        "relative-gap--net-prefix",
+        "capa2",
+        "relative-gap--net-dir",
+        "${workspaceFolder}/import/sumo/capa2"
       ]
     },
     {
@@ -1301,6 +1562,36 @@
         "cwd": "${workspaceFolder}/data/imported/sumo"
       },
       "args": ["-rf", "leopoldshafen-sumo/*"],
+      "hide": true
+    },
+    {
+      "label": "Clean capa2",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "capa2/*"],
+      "hide": true
+    },
+    {
+      "label": "Clean capa2-fast-dta",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "capa2-fast-dta/*"],
+      "hide": true
+    },
+    {
+      "label": "Clean capa2-sumo",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "capa2-sumo/*"],
       "hide": true
     },
     {
