--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -242,6 +242,7 @@
         "1.0",
         "--logittheta",
         "1.0",
+        "-s",
         "duarouter--precision",
         "6",
         "sumo--step-length",
@@ -739,6 +740,66 @@
         "cch-preprocessor--input-prefix",
         "capa2",
         "cch-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/capa2"
+      ]
+    },
+    {
+      "label": "Run DTA (capa2-dijkstra-rust)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (debug)",
+        "Copy duaIterate.py to SUMO",
+        "Clean capa2-dijkstra-rust"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/capa2-dijkstra-rust",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/capa2/capa2.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/capa2/capa2.trips.xml",
+        "--routing-algorithm",
+        "dijkstra-rust",
+        "--mesosim",
+        "--aggregation",
+        "60",
+        "--begin",
+        "0",
+        "--end",
+        "32400",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
+        "-s",
+        "duarouter--precision",
+        "6",
+        "sumo--step-length",
+        "0.1",
+        "sumo--precision",
+        "6",
+        "sumo--threads",
+        "8",
+        "sumo--ignore-route-errors",
+        "sumo--time-to-teleport.disconnected",
+        "0",
+        "dijkstra-preprocessor--input-prefix",
+        "capa2",
+        "dijkstra-preprocessor--input-dir",
         "${workspaceFolder}/import/sumo/capa2"
       ]
     },
@@ -1582,6 +1643,16 @@
         "cwd": "${workspaceFolder}/data/imported/sumo"
       },
       "args": ["-rf", "capa2-fast-dta/*"],
+      "hide": true
+    },
+    {
+      "label": "Clean capa2-dijkstra-rust",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "capa2-dijkstra-rust/*"],
       "hide": true
     },
     {
