--- a/conversion/Cargo.toml
+++ b/conversion/Cargo.toml
@@ -6,6 +6,10 @@ authors = ["Tim 'tim3z' Zeitz <mail@tim3z.net>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = []
+expand-sumo-nodes = []
+
 [dependencies]
 rust_road_router = { path = "../engine" }
 csv = "^1.1.6"
